# wsg32-ros-pkg

./: LICENSE  README.html  README.md
wsg_32_common/: CMakeLists.txt  package.xml
wsg_32_driver/: CMakeLists.txt  cmd_measure.lua  package.xml
wsg_32_driver/launch/: wsg_32_tcp.launch  wsg_32_udp_script.launch
wsg_32_driver/src/: checksum.cpp  cmd.c  common.cpp  functions.cpp  functions_can.cpp  interface.cpp  main.cpp  main_can.cpp  msg.c  serial.c  tcp.c  udp.c
wsg_32_simulation/: CMakeLists.txt  wsg_32_gl.yaml
wsg_32_simulation/controllers/: wsg_32_gl_powerball.yaml  wsg_32_gr.yaml  wsg_32_gr_modular.yaml  wsg_32_gr_powerball.yaml
wsg_32_simulation/launch/: wsg_32.launch  wsg_32_controllers.launch  wsg_32_modular_controllers.launch  wsg_32_powerball_controllers.launch  wsg_32_teleop.launch
wsg_32_simulation/src/: wsg_32_keyboard_teleop.cpp  wsg_32_sim_driver.cpp
